test/bad/feed.pacc
/*
nofeed "pacc: fatal: invalid \`$' at the end of rule \`Sum'"
*/

/* dollar is not permitted at the end of a rule */

Sum :: int ← a:Digit $ b:Digit $ → { a + b }
Digit ← [0-9] _  → { *ref_ptr(ref()) - '0' }

_ :: void ← [ \n] *
